--- a/vendure-backend/tsconfig.json
+++ b/vendure-backend/tsconfig.json
@@ -11,7 +11,8 @@
     "sourceMap": false,
     "skipLibCheck": true,
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "resolveJsonModule": true
   },
   "exclude": ["node_modules", "migration.ts", "src/plugins/**/ui/*", "admin-ui"],
   "ts-node": {
